syntax = "proto3";

package msg;

message CsProto {
    oneof payload {
        CsLogin login = 1;
        CsEcho echo = 2;
    }
}

message ScProto {
    oneof payload {
        ScLogin login = 1;
        ScEcho echo = 2;
    }
}

message CsLogin {
    string username = 1;
    string password = 2;
}

message ScLogin {
    uint32 code = 1;
}

message CsEcho {
    string content = 1;
}

message ScEcho {
    string reply = 1;
}

